# envini

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  e2e-test.sh
.github/workflows/: pipeline.yaml
src/: config_parser.rs  config_parser_test.rs  ini_writer.rs  ini_writer_test.rs  main.rs  test_fixtures.rs
